<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/userImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="12dp"
        android:src="@mipmap/ic_launcher"/>


    <TextView
        android:id="@+id/nameIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameIs"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/userImage"
        android:layout_marginTop="8dp"
       app:layout_constraintStart_toEndOf="@id/userImage"/>

    <TextView
        android:id="@+id/nameFromFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameFromFragmentTxt"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/userImage"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/nameIs"/>

    <TextView
        android:id="@+id/emailFromFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/emailFromFragmentTxt"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/nameFromFragment"
        app:layout_constraintStart_toEndOf="@id/emailIs"/>

    <TextView
        android:id="@+id/emailIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/emailIs"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/nameFromFragment"
        app:layout_constraintStart_toEndOf="@id/userImage"/>

<!--    <Button-->
<!--        android:id="@+id/logout"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:text="LogOut"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/emailFromFragment"/>-->



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailFromFragment"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>